[project]
name = "ssl_maker"
version = "0.1.0"
description = "A cross-platform tool to generate self-signed SSL/TLS certificates via CLI or GUI."
readme = "README.md"
requires-python = ">=3.7"
authors = [
  { name = "Roberto Naoki", email = "rnsanyo@gmail.com" }
]
license = { file = "LICENSE" }
license-expression = "MIT"
dependencies = [
  "click>=8.0.0",
  "cryptography>=41.0.0"
]

keywords = ["ssl", "tls", "certificate", "https", "cli", "gui", "openssl", "self-signed"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Topic :: Security :: Cryptography"
]

[project.urls]
Homepage = "https://github.com/rnsanyo/ssl_maker"
Documentation = "https://github.com/rnsanyo/ssl_maker#readme"
Repository = "https://github.com/rnsanyo/ssl_maker"
Issues = "https://github.com/rnsanyo/ssl_maker/issues"

[project.optional-dependencies]
dev = ["pytest", "mypy"]

[project.scripts]
ssl-maker = "ssl_maker.cli:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
